Refactor Chats to reduce code duplication
