# server/src/chats/entities/chat.entity.ts
@@ -1,8 +1,10 @@
-import { Collection, Entity, ManyToMany, PrimaryKey } from '@mikro-orm/core';
+import { Collection, Entity, ManyToMany, OneToOne, PrimaryKey, Property } from '@mikro-orm/core';
 import { v4 } from 'uuid';
 import { ChatResponse } from '../dto/chat.response';
 import { User } from '../../users/entities/user.entity';
 import { UserResponse } from '../../friends/dto/user.response';
+import { ChatType } from './chat-type.enum';
+import { Group } from '../../groups/entities/group.entity';
 
 @Entity()
 export class Chat {
@@ -12,14 +14,28 @@ export class Chat {
   @ManyToMany(() => User)
   members: Collection<User> = new Collection<User>(this);
 
-  constructor() {
+  @Property()
+  type: ChatType;
+
+  @OneToOne(() => Group, (group) => group.chat, {
+    owner: true,
+    orphanRemoval: true,
+    onDelete: 'cascade',
+    nullable: true,
+  })
+  group?: Group | null;
+
+  constructor(type: ChatType) {
     this.id = v4();
+    this.type = type;
   }
 
-  toChatResponse(contact: UserResponse): ChatResponse {
+  toChatResponse(user?: UserResponse | null): ChatResponse {
     return {
       id: this.id,
-      user: contact,
+      type: this.type,
+      user,
+      group: this.group?.toGroupResponse(this.members.count()) || null,
     };
   }
 }
