# server/swagger-spec.json
@@ -390,33 +390,6 @@
         ]
       }
     },
-    "/api/chats/all": {
-      "get": {
-        "operationId": "ChatsController_getChatsAndGroups",
-        "summary": "Get current user's chats and groups",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "List of chats",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/GroupChatResponse"
-                }
-              }
-            }
-          }
-        },
-        "tags": [
-          "Chat Operation"
-        ],
-        "security": [
-          {
-            "cookie": []
-          }
-        ]
-      }
-    },
     "/api/chats": {
       "get": {
         "operationId": "ChatsController_getChats",
@@ -483,34 +456,6 @@
       }
     },
     "/api/groups": {
-      "get": {
-        "operationId": "GroupsController_fetchGroups",
-        "summary": "Get current user's groups",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "List of groups",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/GroupResponse"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "tags": [
-          "Group Operation"
-        ],
-        "security": [
-          {
-            "cookie": []
-          }
-        ]
-      },
       "post": {
         "operationId": "GroupsController_createGroup",
         "summary": "Create Group",
@@ -547,13 +492,13 @@
         ]
       }
     },
-    "/api/groups/{groupID}": {
+    "/api/groups/{chatId}": {
       "post": {
         "operationId": "GroupsController_addUser",
         "summary": "Add User",
         "parameters": [
           {
-            "name": "groupID",
+            "name": "chatId",
             "required": true,
             "in": "path",
             "schema": {
@@ -597,7 +542,7 @@
         "summary": "Leave Group",
         "parameters": [
           {
-            "name": "groupID",
+            "name": "chatId",
             "required": true,
             "in": "path",
             "schema": {
@@ -627,7 +572,7 @@
         ]
       }
     },
-    "/api/messages/chats/{chatId}": {
+    "/api/messages/{chatId}": {
       "get": {
         "operationId": "MessagesController_getChatMessages",
         "summary": "Get Chat Messages",
@@ -674,105 +619,6 @@
         "parameters": [
           {
             "name": "chatId",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "multipart/form-data": {
-              "schema": {
-                "$ref": "#/components/schemas/CreateMessageDto"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Message Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "boolean"
-                }
-              }
-            }
-          },
-          "201": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "boolean"
-                }
-              }
-            }
-          },
-          "401": {
-            "description": ""
-          }
-        },
-        "tags": [
-          "Message Operation"
-        ],
-        "security": [
-          {
-            "cookie": []
-          }
-        ]
-      }
-    },
-    "/api/messages/groups/{groupId}": {
-      "get": {
-        "operationId": "MessagesController_getGroupMessages",
-        "summary": "Get Group Messages",
-        "parameters": [
-          {
-            "name": "groupId",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/MessageResponse"
-                  }
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Invalid credentials"
-          }
-        },
-        "tags": [
-          "Message Operation"
-        ],
-        "security": [
-          {
-            "cookie": []
-          }
-        ]
-      },
-      "post": {
-        "operationId": "MessagesController_createGroupMessage",
-        "summary": "Send Message to Group",
-        "parameters": [
-          {
-            "name": "groupId",
             "required": true,
             "in": "path",
             "schema": {
@@ -1093,21 +939,6 @@
           "username"
         ]
       },
-      "ChatResponse": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "user": {
-            "$ref": "#/components/schemas/UserResponse"
-          }
-        },
-        "required": [
-          "id",
-          "user"
-        ]
-      },
       "GroupResponse": {
         "type": "object",
         "properties": {
@@ -1135,25 +966,41 @@
           "memberCount"
         ]
       },
-      "GroupChatResponse": {
+      "ChatResponse": {
         "type": "object",
         "properties": {
-          "chats": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/ChatResponse"
-            }
+          "id": {
+            "type": "string"
           },
-          "groups": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/GroupResponse"
-            }
+          "type": {
+            "type": "string",
+            "enum": [
+              "GROUP CHAT",
+              "DIRECT CHAT"
+            ]
+          },
+          "user": {
+            "nullable": true,
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/UserResponse"
+              }
+            ]
+          },
+          "group": {
+            "nullable": true,
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/GroupResponse"
+              }
+            ]
           }
         },
         "required": [
-          "chats",
-          "groups"
+          "id",
+          "type",
+          "user",
+          "group"
         ]
       },
       "ChatDto": {
